@@ -190,6 +190,9 @@ Release 2.1.0-beta - 2013-07-02
     HADOOP-9760. Move GSet and related classes to common from HDFS.
     (suresh)
 
+    HADOOP-9756. Remove the deprecated getServer(..) methods from RPC.
+    (Junping Du via szetszwo)
+
     HADOOP-9770. Make RetryCache#state non volatile. (suresh)
 
   OPTIMIZATIONS
